Roma - Global Commit 100 - Set Portrait Reponsivness of First Section Across Resolutions

--- a/app/javascript/stylesheets/2-component_styles/navbar.scss
+++ b/app/javascript/stylesheets/2-component_styles/navbar.scss
@@ -1,12 +1,20 @@
 // Navbar SCSS
 nav {
+  margin: 0 !important;
   padding: 0 !important;
 }
+
 .nav-font {
   @include font_mix;
 }
 
+.react-link {
+  @include react_link_mix;
+  cursor: pointer;
+}
+
 .navbar-brand {
+  margin: 0 !important;
   padding: 0 !important;
 }
 
@@ -19,47 +27,42 @@ li {
   padding-left: 40px;
 }
 
-.react-link {
-  @include react_link_mix;
-  cursor: pointer;
-}
-
 // Nav Scroll Change
 
 .navbar {
-  transition: all 0.4s;
+  transition: all 0.4s ease-in-out;
 }
 
-.navbar .nav-link {
-  color: #fff;
-}
+// .navbar .nav-link {
+//   color: #fff;
+// }
 
-.navbar .nav-link:hover,
-.navbar .nav-link:focus {
-  color: #fff;
-  text-decoration: none;
-}
+// .navbar .nav-link:hover,
+// .navbar .nav-link:focus {
+//   color: #fff;
+//   text-decoration: none;
+// }
 
-.navbar .navbar-brand {
-  color: #fff;
-}
+// .navbar .navbar-brand {
+//   color: #fff;
+// }
 
-/* Change navbar styling on scroll */
+//  ON SCROLL
 .navbar.active {
   background: #fff;
   box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .navbar.active .nav-link {
-  color: rgba(0, 0, 0, 0.7) !important;
+  color: rgb(0, 0, 0) !important;
 }
 
-.navbar.active .nav-link:hover,
-.navbar.active .nav-link:focus {
-  color: black !important;
-  text-decoration: none;
-}
+// .navbar.active .nav-link:hover,
+// .navbar.active .nav-link:focus {
+//   color: black !important;
+//   text-decoration: none;
+// }
 
-.navbar.active .navbar-brand {
-  color: black !important;
-}
+// .navbar.active .navbar-brand {
+//   color: black !important;
+// }
