Roma - Global Commit 101 - Set Portrait Reponsivness of First Section Across Resolutions - Header and Service Sections Done

--- a/app/javascript/stylesheets/2-component_styles/contact.scss
+++ b/app/javascript/stylesheets/2-component_styles/contact.scss
@@ -9,11 +9,12 @@
   padding: 0 !important;
 }
 
-.card-deck {
+.contact-deck {
   padding-top: 20px !important;
 }
 
 .quote-deck-out {
+  padding-top: 20px !important;
   padding-bottom: 20px !important;
 }
 
