--- a/app/javascript/stylesheets/2-component_styles/contact.scss
+++ b/app/javascript/stylesheets/2-component_styles/contact.scss
@@ -161,6 +161,7 @@ textarea {
   @include font_mix;
   color: red !important;
   font-size: 16px !important;
+  font-weight: 300 !important;
   padding: 0 !important;
   margin: 0 !important;
 }
