--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -19,6 +19,7 @@
 @import "stylesheets/3-sections/section_four";
 @import "stylesheets/3-sections/semi_break";
 @import "stylesheets/3-sections/section_five";
+@import "stylesheets/3-sections/section_six";
 
 // 4 - Pages
 @import "stylesheets/4-pages/roma";
